[project]
name = "rlvf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Tom Pollak", email = "tompollak1000@gmail.com" }]
requires-python = ">=3.12"
dependencies = ["verifiers"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
verifiers = { path = "verifiers", editable = true }
